--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,9 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
+theme                    : minima
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Li Feng"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
